--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,18 @@ Authors@R:
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/curso-r/tidycenso
 BugReports: https://github.com/curso-r/tidycenso/issues
+Imports: 
+    magrittr,
+    dplyr,
+    readr,
+    readxl,
+    stringr,
+    tibble,
+    tidyr
